# tft-shop

./: package.json
backend/: Makefile  main.py  pyproject.toml
backend/tft/: main.py
backend/tft/routes/: app.py
backend/tft/utils/: enable_cors.py  errors.py
front/: README.md  package.json
front/src/: App.vue  shims-vue.d.ts
front/src/components/: TradeForm.vue
front/src/router/: index.ts
src/components/: Navbar.vue  TradeForm.vue
src/router/: index.ts
src/views/: 404.vue  Shop.vue
