[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MohamedElmdary <engm5081@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.19"
js-sdk = "^11.5b1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
